--- a/KingFeatures/KingFeatures.html
+++ b/KingFeatures/KingFeatures.html
@@ -45,6 +45,82 @@ Founded in 1914 by William Randolph Hearst
 <div class="mySlides" style="text-align: center;"><img src="KingFeatures24.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="KingFeatures25.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="KingFeatures26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures42.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures44.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures45.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures46.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures47.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures48.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures49.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures50.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures51.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures52.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures53.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures54.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures55.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures56.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures57.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures58.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures59.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures60.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures61.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures62.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures63.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures64.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures65.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures66.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures67.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures68.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures69.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures70.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures71.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures72.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures73.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures74.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures75.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures76.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures77.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures78.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures79.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures80.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures81.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures82.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures83.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures84.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures85.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures86.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures87.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures88.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures89.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures90.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures91.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures92.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures93.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures94.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures95.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures96.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures97.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures98.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures99.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures100.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures101.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KingFeatures102.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -84,91 +160,91 @@ King Features strips and panels
 <li><a href="../DennisTheMenace/DennisTheMenace.html">Dennis the Menace</a> (1951)
 <li><a href="../DonaldDuck/DonaldDuck.html">Donald Duck</a> (1934)
 <li><a href="KingFeatures26.jpg">Dustin</a> (2010)
-<li>Edge City
-<li>Etta Kett
-<li>Family Circus
-<li><a href="../Felix/Felix.html">Felix the Cat</a>
-<li>Flapper Filosofy
-<li><a href="../FlashGordon/FlashGordon.html">Flash Gordon</a>
-<li>Franklin Fibbs
-<li>Funky Winkerbean
-<li>Gil
-<li>Glamor Girls
-<li>Grin and Bear It
-<li>Hägar the Horrible
-<li>Happy Hooligan
-<li>Hazel
-<li>Henry
-<li>Hi and Lois
-<li>Hocus-Focus
-<li>Hubert
-<li>Intelligent Life
-<li>Johnny Hazard
-<li>José Carioca
-<li>Judge Parker
-<li>Jungle Jim
-<li>Junior Whirl
-<li><a href="../KatzenjammerKids/KatzenjammerKids.html">The Katzenjammer Kids</a>
-<li>Kevin and Kell
-<li>King of the Royal Mounted
-<li>Krazy Kat
-<li>Laff-a-Day
-<li>Little Annie Rooney
-<li>Little Audrey
-<li>Little Iodine
-<li>Little King, The
-<li>Lockhorns, The
-<li>Mallard Fillmore
-<li><a href="../MandrakeTheMagician/MandrakeTheMagician.html">Mandrake the Magician</a>
-<li>Mark Trail
-<li>Marvin
-<li>Mary Worth
-<li><a href="../MickeyMouse/MickeyMouse.html">Mickey Mouse</a>
-<li>Moose &amp; Molly
-<li>Mother Goose and Grimm
-<li>Mutts
-<li>My Cage
-<li>Norb
-<li>Norm, The
-<li>Oh, Brother!
-<li>Ollie and Quentin
-<li>On the Fastrack
-<li>Ozark Ike
-<li>Pajama Diaries, The
-<li>Pardon My Planet
-<li>Pete the Tramp
-<li><a href="../Phantom/Phantom.html">Phantom</a>
-<li>Piranha Club
-<li><a href="../Popeye/Popeye.html">Popeye</a>
-<li><a href="../PrinceValiant/PrinceValiant.html">Prince Valiant</a>
-<li>Radio Patrol
-<li>Red Barry
-<li>Redeye
-<li>Retail
-<li>Rex Morgan, M.D.
-<li>Rhymes with Orange
-<li>Rip Kirby
-<li>Ripley's Believe It or Not!
-<li>Rusty Riley
-<li>Safe Havens
-<li>Sally Forth
-<li>Sam and Silo
-<li>Sherman's Lagoon
-<li>Six Chix
-<li>Slylock Fox &amp; Comics for Kids
-<li>Steve Roper and Mike Nomad
-<li>Take it from the Tinkersons
-<li>Teena
-<li>They'll Do It Every Time
-<li>Tiger
-<li>Tina's Groove
-<li>Todd the Dinosaur
-<li>Triple Take
-<li>Trudy
-<li>Tundra
-<li>Tumbleweeds
-<li><a href="../ZippyThePinhead/ZippyThePinhead.html">Zippy the Pinhead</a>
-<li>Zits
+<li><a href="KingFeatures27.jpg">Edge City</a> (2004)
+<li><a href="KingFeatures28.jpg">Etta Kett</a> (1925)
+<li><a href="KingFeatures29.jpg">Family Circus</a> (1960)
+<li><a href="../Felix/Felix.html">Felix the Cat</a> (1919)
+<li><a href="KingFeatures30.jpg">Flapper Filosofy</a> (1929)
+<li><a href="../FlashGordon/FlashGordon.html">Flash Gordon</a> (1934)
+<li><a href="KingFeatures31.jpg">Franklin Fibbs</a> (2004)
+<li><a href="KingFeatures32.jpg">Funky Winkerbean</a> (1972)
+<li><a href="KingFeatures33.jpg">Gil</a> (2012)
+<li><a href="KingFeatures34.jpg">Glamor Girls</a> (1966)
+<li><a href="KingFeatures35.jpg">Grin and Bear It</a> (1932)
+<li><a href="KingFeatures36.jpg">Hägar the Horrible</a> (1973)
+<li><a href="KingFeatures37.jpg">Happy Hooligan</a> (1932)
+<li><a href="KingFeatures38.jpg">Hazel</a> (1943)
+<li><a href="KingFeatures39.jpg">Henry</a> (1932)
+<li><a href="KingFeatures40.jpg">Hi and Lois</a> (1954)
+<li><a href="KingFeatures41.jpg">Hocus-Focus</a> (1965)
+<li><a href="KingFeatures42.jpg">Hubert</a> (1945)
+<li><a href="KingFeatures43.jpg">Intelligent Life</a> (2014)
+<li><a href="KingFeatures44.jpg">Johnny Hazard</a> (1944)
+<li><a href="KingFeatures45.jpg">José Carioca</a> (1942)
+<li><a href="KingFeatures46.jpg">Judge Parker</a> (1952)
+<li><a href="KingFeatures47.jpg">Jungle Jim</a> (1934)
+<li><a href="../KatzenjammerKids/KatzenjammerKids.html">The Katzenjammer Kids</a> (1897)
+<li><a href="KingFeatures48.jpg">Kevin and Kell</a> (1995)
+<li><a href="KingFeatures50.jpg">King Classics</a> (1977)
+<li><a href="KingFeatures49.jpg">King of the Royal Mounted</a> (1935)
+<li><a href="KingFeatures51.jpg">Krazy Kat</a> (1913)
+<li><a href="KingFeatures52.jpg">Laff-a-Day</a> (1936)
+<li><a href="KingFeatures53.jpg">Little Annie Rooney</a> (1927)
+<li><a href="KingFeatures54.jpg">Little Audrey</a> (1947)
+<li><a href="KingFeatures55.jpg">Little Iodine</a> (1943)
+<li><a href="KingFeatures56.jpg">Little King</a> (1934)
+<li><a href="KingFeatures57.jpg">Lockhorns, The</a> (1968)
+<li><a href="KingFeatures58.jpg">Mallard Fillmore</a> (1994)
+<li><a href="../MandrakeTheMagician/MandrakeTheMagician.html">Mandrake the Magician</a> (1934)
+<li><a href="KingFeatures59.jpg">Mark Trail</a> (1946)
+<li><a href="KingFeatures60.jpg">Marvin</a> (1982)
+<li><a href="KingFeatures61.jpg">Mary Worth</a> (1938)
+<li><a href="../MickeyMouse/MickeyMouse.html">Mickey Mouse</a> (1928)
+<li><a href="KingFeatures62.jpg">Moose &amp; Molly</a> (1965)
+<li><a href="KingFeatures63.jpg">Mother Goose and Grimm</a> (1984)
+<li><a href="KingFeatures64.jpg">Mutts</a> (1994)
+<li><a href="KingFeatures65.jpg">My Cage</a> (2007)
+<li><a href="KingFeatures66.jpg">Norb</a> (1989)
+<li><a href="KingFeatures67.jpg">Norm, The</a> (1996)   
+<li><a href="KingFeatures68.jpg">Oh, Brother!</a> (2010)
+<li><a href="KingFeatures69.jpg">Ollie and Quentin</a> (2002)
+<li><a href="KingFeatures70.jpg">On the Fastrack</a> (1984)
+<li><a href="KingFeatures71.jpg">Ozark Ike</a> (1945)
+<li><a href="KingFeatures72.jpg">Pajama Diaries</a> (2006)
+<li><a href="KingFeatures73.jpg">Pardon My Planet</a> (2004)
+<li><a href="KingFeatures74.jpg">Pete the Tramp</a> (1932)
+<li><a href="../Phantom/Phantom.html">Phantom</a> (1936)
+<li><a href="KingFeatures75.jpg">Piranha Club</a> (1998)
+<li><a href="../Popeye/Popeye.html">Popeye</a> (1929)
+<li><a href="../PrinceValiant/PrinceValiant.html">Prince Valiant</a> (1937)
+<li><a href="KingFeatures76.jpg">Radio Patrol</a> (1933)
+<li><a href="KingFeatures77.jpg">Red Barry</a> (1934)
+<li><a href="KingFeatures78.jpg">Redeye</a> (1967)
+<li><a href="KingFeatures79.jpg">Retail</a> (2006)
+<li><a href="KingFeatures80.jpg">Rex Morgan, M.D.</a> (1948)
+<li><a href="KingFeatures81.jpg">Rhymes with Orange</a> (1995)
+<li><a href="KingFeatures82.jpg">Rip Kirby</a> (1946)
+<li><a href="KingFeatures83.jpg">Ripley's Believe It or Not!</a> (1919)
+<li><a href="KingFeatures84.jpg">Rusty Riley</a> (1948)
+<li><a href="KingFeatures85.jpg">Safe Havens</a> (1988)
+<li><a href="KingFeatures86.jpg">Sally Forth</a> (1982)
+<li><a href="KingFeatures87.jpg">Sam and Silo</a> (1977)
+<li><a href="KingFeatures88.jpg">Sherman's Lagoon</a> (1991)
+<li><a href="KingFeatures89.jpg">Six Chix</a> (2000)
+<li><a href="KingFeatures90.jpg">Slylock Fox</a> (1987)
+<li><a href="KingFeatures91.jpg">Steve Roper and Mike Nomad</a> (1936)
+<li><a href="KingFeatures92.jpg">Take it from the Tinkersons</a> (2013)
+<li><a href="KingFeatures93.jpg">Teena</a> (1944)
+<li><a href="KingFeatures94.jpg">They'll Do It Every Time</a> (1929)
+<li><a href="KingFeatures95.jpg">Tiger</a> (1965)
+<li><a href="KingFeatures96.jpg">Tina's Groove</a> (2002)
+<li><a href="KingFeatures97.jpg">Todd the Dinosaur</a> (2001)
+<li><a href="KingFeatures98.jpg">Triple Take</a> (2005)
+<li><a href="KingFeatures99.jpg">Trudy</a> (1963)
+<li><a href="KingFeatures100.jpg">Tundra</a> (1991)
+<li><a href="KingFeatures101.jpg">Tumbleweeds</a> (1965)
+<li><a href="../ZippyThePinhead/ZippyThePinhead.html">Zippy the Pinhead</a> (1971)
+<li><a href="KingFeatures102.jpg">Zits</a> (1997)
 
 </p>
 </body>
