--- a/index.html
+++ b/index.html
@@ -1636,6 +1636,13 @@
 </tr>
 
 <tr>
+<td>Abie The Agent</td>
+<td>1914</td>
+<td>King Features</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Abigail And The Snowman</td>
 <td>2013</td>
 <td>Boom!</td>
@@ -3644,6 +3651,13 @@
 <td>1988</td>
 <td>NBC</td>
 <td><a href="Alf/Alf.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Alphonse And Gaston</td>
+<td>1914</td>
+<td>King Features</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6306,6 +6320,13 @@
 </tr>
 
 <tr>
+<td>Apartment 3-G</td>
+<td>1961</td>
+<td>King Features</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ape</td>
 <td>2003</td>
 <td>Fantagraphics</td>
@@ -6702,6 +6723,13 @@
 <td>2015</td>
 <td>Action Lab</td>
 <td><a href="ActionLab/ActionLab.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Arctic Circle</td>
+<td>2007</td>
+<td>King Features</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8706,6 +8734,13 @@
 </tr>
 
 <tr>
+<td>Baby Blues</td>
+<td>1990</td>
+<td>King Features</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Baby Demonica</td>
 <td>2002</td>
 <td>Sirius</td>
@@ -10309,6 +10344,13 @@
 
 <tr>
 <td>Beetle Bailey</td>
+<td>1950</td>
+<td>King Features</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Beetle Bailey</td>
 <td>1969</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
@@ -10783,6 +10825,13 @@
 </tr>
 
 <tr>
+<td>Better Half</td>
+<td>1956</td>
+<td>King Features</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Better Life For You</td>
 <td>1960</td>
 <td>Harvey</td>
@@ -10871,6 +10920,13 @@
 <td>2017</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Between Friends</td>
+<td>1990</td>
+<td>King Features</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11060,6 +11116,13 @@
 <td>2015</td>
 <td>AC Comics</td>
 <td><a href="ACComics/ACComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Big Ben Bolt</td>
+<td>1950</td>
+<td>King Features</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11676,6 +11739,13 @@
 <td>1972</td>
 <td>Kitchen Sink</td>
 <td><a href="KitchenSinkPress/KitchenSinkPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bizarro</td>
+<td>1985</td>
+<td>King Features</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12626,6 +12696,13 @@
 </tr>
 
 <tr>
+<td>Bleeker: The Rechargable Dog</td>
+<td>2006</td>
+<td>King Features</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blindside</td>
 <td>1996</td>
 <td>Image</td>
@@ -13497,6 +13574,13 @@
 <td>1992</td>
 <td>Tundra</td>
 <td><a href="Tundra/Tundra.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Boner's Ark</td>
+<td>1968</td>
+<td>King Features</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14480,6 +14564,13 @@
 </tr>
 
 <tr>
+<td>Brilliant Mind Of Edison Lee</td>
+<td>2006</td>
+<td>King Features</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Brilliant Trash</td>
 <td>2017</td>
 <td>Aftershock</td>
@@ -14504,7 +14595,7 @@
 <td>Bringing Up Father</td>
 <td>1913</td>
 <td>Cupples &amp; Leon</td>
-<td><a href="BrianZimmerman/BrianZimmerman.html">Details</a></td>
+<td><a href="BringingUpFather/BringingUpFather.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14806,6 +14897,13 @@
 <td>1984</td>
 <td>Fox</td>
 <td><a href="BuckarooBanzai/BuckarooBanzai.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Buckles</td>
+<td>1996</td>
+<td>King Features</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19300,6 +19398,13 @@
 </tr>
 
 <tr>
+<td>Comics Teach</td>
+<td>1979</td>
+<td>King Features</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Comics: The Complete Collection</td>
 <td>2008</td>
 <td>Abrams</td>
@@ -20217,6 +20322,13 @@
 </tr>
 
 <tr>
+<td>Crankshaft</td>
+<td>1987</td>
+<td>King Features</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Crap</td>
 <td>1993</td>
 <td>Fantagraphics</td>
@@ -20676,6 +20788,13 @@
 <td>2017</td>
 <td>Alterna</td>
 <td><a href="Alterna/Alterna.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Crock</td>
+<td>1975</td>
+<td>King Features</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21252,6 +21371,13 @@
 </tr>
 
 <tr>
+<td>Curtis</td>
+<td>1988</td>
+<td>King Features</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Curtis Magazines</td>
 <td>1971</td>
 <td>Publisher</td>
@@ -21530,6 +21656,13 @@
 <td>2009</td>
 <td>Publisher</td>
 <td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Daddy Daze</td>
+<td>2018</td>
+<td>King Features</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23594,6 +23727,13 @@
 <td>1997</td>
 <td>Slave Labor</td>
 <td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Deflocked</td>
+<td>2006</td>
+<td>King Features</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
 </tr>
 
 <tr>
@@ -44324,7 +44464,7 @@
 </tr>
 
 <tr>
-<td>King Kong</td>
+<td>King Kong</td>  
 <td>1933</td>
 <td>RKO</td>
 <td><a href="KingKong/KingKong.html">Details</a></td>
