--- a/ABabiesXBabies/ABabiesXBabies.html
+++ b/ABabiesXBabies/ABabiesXBabies.html
@@ -7,11 +7,9 @@
 </head>
 
 <body>
-<img src="ABabiesXBabies.jpg"><br>
-1 issue 2012 by Marvel<br>
-Illustrator: Gurihiru, Writer: Skottie Young
+<img src="ABabiesXBabies.jpg">
 <p>
-Avengers babies versus X-Men babies.
+1 issue in 2012 by Marvel. Illustrated by Gurihiru, and written by Skottie Young.
 </p><p>
 In the community of Marvelous Meadows, baby Steve is being put to bed in his crib and says good night to all of his stufffed bears. However, he notices Bucky Bear is missing and soon discovers that Scott Summers from across the street has taken him. Steve is determined to get Bucky Bear back and accepts Scott's challange when he sees him dressed in his Cyclops costume. After changing into his Captain America costume, he calls on his fellow Avengers.
 </p><p>
