--- a/index.html
+++ b/index.html
@@ -32811,6 +32811,13 @@
 </tr>
 
 <tr>
+<td>From Aargh! to Zap!: Harvey Kurtzman's Visual History of the Comics</td>
+<td>1991</td>
+<td>Simon And Schuster</td>
+<td><a href="FromAarghToZap/FromAarghToZap.html">Details</td>
+</tr>
+
+<tr>
 <td>From Beyonde</td>
 <td>1991</td>
 <td>Studio Insidio</td>
@@ -49644,7 +49651,7 @@
 </tr>
 
 <tr>
-<td>Marvel Comics</td>
+<td>Marvel Comics Group</td>
 <td>1939</td>
 <td>Publisher</td>
 <td><a href="Marvel/Marvel.html">Details</a></td>
