--- a/index.html
+++ b/index.html
@@ -19699,6 +19699,12 @@
 </tr>
 
 <tr>
+<td>Condorito</ta>
+<td>1949</td>
+<td>United Press Syndicate</td>
+<td><a href="Condorito/Condorito.html">Details</a></td>
+</tr>
+<tr>
 <td>Confessions Illustrated</td>
 <td>1956</td>
 <td>EC</td>
@@ -48752,6 +48758,13 @@
 <td>2017</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mafalda</ta>
+<td>1964</td>
+<td>Ediciones de la Flor</td>
+<td><a href="Mafalda/Mafalda.html">Details</a></td>
 </tr>
 
 <tr>
