index Bill Watterson

--- a/index.html
+++ b/index.html
@@ -11458,7 +11458,7 @@
 <td>Bill Watterson</td>
 <td>1958</td>
 <td>Creator</td>
-<td><a href="../CalvinAndHobbes/CalvinAndHobbes.html">Details</a></td>
+<td><a href="CalvinAndHobbes/CalvinAndHobbes.html">Details</a></td>
 </tr>
 
 <tr>
